@@ -8,7 +8,7 @@ Approximate change log for AVRDUDE by version.
 Current:
 
   * Major changes compared to the previous version:
-    - Atmel EDBG protocol support added (JTAGICE3, XplainedPro)
+    - Atmel EDBG protocol support added (JTAGICE3, XplainedPro, Atmel-ICE)
 
   * New devices supported:
     - ...
@@ -16,6 +16,7 @@ Current:
   * New programmers supported:
     - Atmel DFU, using FLIP protocol version 1 (AT90USB and ATmega*U* devices),
       or version 2 (Xmega devices)
+    - Atmel-ICE (ARM/AVR), JTAG, PDI, debugWIRE, ISP modi
 
   * Bugfixes
     - bug #40055: AVRDUDE segfaults when writing eeprom
